--- a/api/bases/octavia.openstack.org_octavias.yaml
+++ b/api/bases/octavia.openstack.org_octavias.yaml
@@ -590,11 +590,10 @@ spec:
                     description: PersistenceDatabaseAccount - name of MariaDBAccount
                       which will be used to connect for the persistence database
                     type: string
-                  redisHostIPs:
-                    description: List of Redis Host IP addresses
-                    items:
-                      type: string
-                    type: array
+                  redisInstance:
+                    default: redis
+                    description: Redis instance name.
+                    type: string
                   resources:
                     description: Resources - Compute Resources required by this service
                       (Limits/Requests). https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
@@ -680,6 +679,7 @@ spec:
                     type: string
                 required:
                 - databaseInstance
+                - redisInstance
                 - role
                 - secret
                 - serviceAccount
@@ -787,11 +787,10 @@ spec:
                     description: PersistenceDatabaseAccount - name of MariaDBAccount
                       which will be used to connect for the persistence database
                     type: string
-                  redisHostIPs:
-                    description: List of Redis Host IP addresses
-                    items:
-                      type: string
-                    type: array
+                  redisInstance:
+                    default: redis
+                    description: Redis instance name.
+                    type: string
                   resources:
                     description: Resources - Compute Resources required by this service
                       (Limits/Requests). https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
@@ -877,6 +876,7 @@ spec:
                     type: string
                 required:
                 - databaseInstance
+                - redisInstance
                 - role
                 - secret
                 - serviceAccount
@@ -984,11 +984,10 @@ spec:
                     description: PersistenceDatabaseAccount - name of MariaDBAccount
                       which will be used to connect for the persistence database
                     type: string
-                  redisHostIPs:
-                    description: List of Redis Host IP addresses
-                    items:
-                      type: string
-                    type: array
+                  redisInstance:
+                    default: redis
+                    description: Redis instance name.
+                    type: string
                   resources:
                     description: Resources - Compute Resources required by this service
                       (Limits/Requests). https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
@@ -1074,6 +1073,7 @@ spec:
                     type: string
                 required:
                 - databaseInstance
+                - redisInstance
                 - role
                 - secret
                 - serviceAccount
@@ -1265,11 +1265,6 @@ spec:
                   ContainerImage)
                 format: int64
                 type: integer
-              redisHostIPs:
-                description: List of Redis Host IP addresses
-                items:
-                  type: string
-                type: array
               transportURLSecret:
                 description: TransportURLSecret - Secret containing RabbitMQ transportURL
                 type: string
