--- a/templates/octaviaamphoracontroller/config/octavia.conf
+++ b/templates/octaviaamphoracontroller/config/octavia.conf
@@ -46,6 +46,10 @@ client_ca = /etc/octavia/certs/client_ca.cert.pem
 persistence_connection = {{ .PersistenceDatabaseConnection }}
 jobboard_enabled = True
 jobboard_backend_hosts = {{ .JobboardBackendHosts }}
+#{{ if (index . "TransportURL") }}
+jobboard_redis_backend_ssl_options = ssl:{{ .RedisTLS }},ssl_cert_reqs:'required'
+#jobboard_redis_backend_ssl_options = ssl:False,ssl_ca_certs:None,ssl_cert_reqs:required,ssl_certfile:None,ssl_keyfile:None
+#{{ end }}
 # TODO(gthiemonge) enable sentinel when it is exposed in the redis service.
 #jobboard_backend_port = 26379
 #jobboard_backend_password = ""
